--- a/output/chrome/manifest.json
+++ b/output/chrome/manifest.json
@@ -12,7 +12,7 @@
             ]
         }
     ], 
-    "name": "Like I Give A F***", 
+    "name": "Like I Give A Fuck", 
     "icons": {
         "128": "icons/icon128.png", 
         "48": "icons/icon48.png", 
@@ -22,12 +22,12 @@
         "res/*", 
         "assets/*"
     ], 
-    "description": "Changes every occurance of Facebook's 'Like' to 'Give a Fuck'", 
+    "description": "Changes every 'Like' to 'I Give a Fuck' on Facebook.com", 
     "background": {
         "page": "background.html"
     }, 
-    "homepage_url": "http://like-i-give-a.retromediation.net/", 
-    "version": "0.7", 
+    "homepage_url": "http://retromediation.net/", 
+    "version": "1.0", 
     "manifest_version": 2, 
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'", 
     "permissions": [
