--- a/output/chrome/manifest.json
+++ b/output/chrome/manifest.json
@@ -23,12 +23,12 @@
         "assets/*", 
         "icons/*"
     ], 
-    "description": "Changes every 'Like' to 'I Give a Fuck' on Facebook.com", 
+    "description": "Changes every 'Like' to 'I Give a Fuck' on facebook.com", 
     "background": {
         "page": "background.html"
     }, 
     "homepage_url": "http://fabsrc.github.io/like-i-give-a-fuck/", 
-    "version": "1.0.7", 
+    "version": "1.0.8", 
     "manifest_version": 2, 
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'", 
     "permissions": [
