--- a/output/like-i-give-a-fuck-1.1.2/manifest.json
+++ b/output/like-i-give-a-fuck-1.1.2/manifest.json
@@ -2,7 +2,7 @@
  "manifest_version": 2,
  "name": "Like I Give a Fuck",
  "description": "Changes every 'Like' button and text field to 'Give a fuck' on Facebook",
- "version": "1.1.1",
+ "version": "1.1.2",
  "icons": {
   "16": "icons/icon16.png",
   "32": "icons/icon32.png",
@@ -16,7 +16,7 @@
    "*://*.facebook.com/*"
   ],
   "js": [
-   "💩.js"
+   "main.js"
   ]
  }]
 }
