--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Like I Give a Fuck",
   "description": "Changes every 'Like' button and text field to 'Give a fuck' on Facebook",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -14,13 +14,13 @@
   },
   "applications": {
    "gecko": {
-      "id": "ligaf@mozilla.org"
+      "id": "{82CEEC65-D441-4F66-A31C-42DB4267155C}"
    }
   },
   "content_scripts": [
    {
       "matches": ["*://*.facebook.com/*"],
-      "js": ["💩.js"]
+      "js": ["main.js"]
    }
  ]
 
