--- a/output/like-i-give-a-fuck-1.3.0/manifest.json
+++ b/output/like-i-give-a-fuck-1.3.0/manifest.json
@@ -1,9 +1,8 @@
 {
-
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Like I Give a Fuck",
   "description": "Changes every 'Like' button and text field to 'Give a fuck' on Facebook",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -12,16 +11,8 @@
     "256": "icons/icon256.png",
     "512": "icons/icon512.png"
   },
-  "applications": {
-   "gecko": {
-      "id": "{82CEEC65-D441-4F66-A31C-42DB4267155C}"
-   }
-  },
-  "content_scripts": [
-   {
-      "matches": ["*://*.facebook.com/*"],
-      "js": ["main.js"]
-   }
- ]
-
+  "content_scripts": [{
+    "matches": ["*://*.facebook.com/*"],
+    "js": ["main.js"]
+  }]
 }
